# NCentrEdcpp

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/NCentrEd.Client/: CMakeLists.txt
src/NCentrEd.Client.Engine/: CMakeLists.txt
src/NCentrEd.Client.Engine/include/NCentrEd.Client.Engine/: Application.hpp  Types.hpp
src/NCentrEd.Client.Engine/include/NCentrEd.Client.Engine/Graphics/: ComputePipeline.hpp  ComputePipelineDescriptor.hpp  ComputePipelineDescriptorBuilder.hpp  GraphicsPipeline.hpp  GraphicsPipelineDescriptor.hpp  GraphicsPipelineDescriptorBuilder.hpp  IComputePipeline.hpp  IGraphicsDevice.hpp  IGraphicsPipeline.hpp
src/NCentrEd.Client.Engine/lib/: CMakeLists.txt
src/NCentrEd.Client.Engine/src/: Application.cpp
src/NCentrEd.Client.Engine/src/Graphics/: ComputePipeline.cpp  ComputePipelineDescriptorBuilder.cpp  GraphicsDevice.cpp  GraphicsPipeline.cpp  GraphicsPipelineDescriptorBuilder.cpp
src/NCentrEd.Client/include/NCentrEd.Client/: ClientApplication.hpp
src/NCentrEd.Client/src/: ClientApplication.cpp  Main.cpp
